Fixed bugs: Broken ramp skill deserialize, and table icon alignment.

--- a/mhrb/css/component_groups/select_views.css
+++ b/mhrb/css/component_groups/select_views.css
@@ -120,11 +120,11 @@ div.selection-table-icon-box {
     justify-content: center;
 
     height: 24px;
-    width: 24px;
+    width: 100%;
 }
 div.selection-table-icon-box > img {
-    height: 100%;
-    width: 100%;
+    height: 24px;
+    width: 24px;
 }
 
 .selection-table-cell-justify-left {
